--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -79,9 +79,16 @@ p, span, b {
     .container{
         position: absolute;
         z-index: 11;
+        left: 0%;
 
         nav{
             background-color: #e3f2fd03;
+        }
+        .espacio_contacto{
+            padding-left: 10%;
+        }
+        .contenedor_imagen{
+            margin-left: 8%;
         }
     }
     
@@ -613,3 +620,19 @@ p, span, b {
     right: 20px;
     box-shadow: -1px 1px 5px 1px #B58D10;
     z-index: 2; }
+
+    .color_enviar{
+        background-color: $color_azul;
+        color: white;
+
+        &:hover{
+            color: white;
+        }
+}
+    .color_cancelar{
+        background-color: rgba(204, 3, 3, 0.801);
+        color: white;
+        &:hover{
+            color: white;
+        }
+    }
