--- a/scss/_zinmuebles.scss
+++ b/scss/_zinmuebles.scss
@@ -41,7 +41,7 @@
     
 }
 #buscador_inmuebles{
-    padding-bottom: 30%;
+    padding-bottom: 4%;
     position: relative;
     .linea_decoracion{
         background: $color_azul_oscuro;
@@ -54,7 +54,7 @@
         }
         .precio_inmueble {
             position: absolute;
-            top: 240px;
+            top: 210px;
             font-size: 9px;
             color: #ffffff;
             text-align: center;
@@ -62,6 +62,14 @@
             background-color: rgba(181, 141, 16, 0.66);
             padding: 16px 45px 11px 45px;
             margin-left: 0%;
+        }
+        .imagenes_inmueble{
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+        }
+        .margen_cards{
+            margin-bottom: 27%;
         }
         .gestion_inmueble{
             position: absolute;
@@ -72,7 +80,7 @@
             letter-spacing: 1.5px;
             background-color: rgba(181, 141, 16, 0.66);
             padding: 12px 41px 11px 45px;
-            margin-left: 40%;
+            margin-left: 50%;
         }
         .card-body{
             background-color: $color_azul_oscuro;
@@ -89,7 +97,6 @@
         .info_inmueble{
             display: flex;
             list-style: none;
-            margin-left: -6%;
-            margin-right: -10%;
+          
         }
 }
