--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -11,7 +11,7 @@
     font-family: 'slick';
     font-weight: normal;
     font-style: normal;
-
+    
     src: url('./fonts/slick.eot');
     src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
 }
@@ -88,11 +88,11 @@
 }
 .slick-prev:before
 {
-    content: '←';
+    content: '‹';
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: '→';
+    content: '›';
 }
 
 .slick-next
@@ -106,11 +106,11 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: '›';
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '←';
+    content: '‹';
 }
 
 /* Dots */
