--- a/css/style.css
+++ b/css/style.css
@@ -4124,7 +4124,8 @@ a.close.disabled {
 
 .modal-title {
   margin-bottom: 0;
-  line-height: 1.5; }
+  line-height: 1.5;
+  font-weight: bold; }
 
 .modal-body {
   position: relative;
@@ -7666,8 +7667,8 @@ p, span, b {
   color: white; }
 
 .boton_dorado:hover {
-  background-color: white;
-  color: #B58D10; }
+  background-color: #002230;
+  color: white; }
 
 .margen_busca {
   margin-bottom: 21px; }
@@ -7693,7 +7694,7 @@ p, span, b {
   #nav .container nav {
     background-color: #e3f2fd03; }
   #nav .container .espacio_contacto {
-    padding-left: 10%; }
+    padding-left: 4%; }
   #nav .container .contenedor_imagen {
     margin-left: 8%; }
 
@@ -7705,10 +7706,13 @@ p, span, b {
   text-decoration: none; }
 
 .logo {
-  width: 44%;
+  width: 60%;
   height: 0%;
   margin-top: -7%;
   padding: 1%; }
+
+.margen_top {
+  margin-top: -3%; }
 
 #texto_logo {
   margin-top: -104px; }
@@ -7721,8 +7725,11 @@ p, span, b {
   color: white; }
 
 .boton_azul:hover {
-  background-color: white;
-  color: #0057A1; }
+  background-color: #B58D10;
+  color: white; }
+
+.tamaño_btn_buscar {
+  font-size: 16px; }
 
 #destacadas .precio_inmueble {
   position: absolute;
@@ -8045,6 +8052,8 @@ p, span, b {
   #footer .color_a_foot_imper {
     color: #0057A1;
     text-decoration: none; }
+    #footer .color_a_foot_imper:hover {
+      color: white; }
 
 .margen.contacto {
   margin-right: 8%; }
@@ -8069,7 +8078,7 @@ p, span, b {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #c6a062;
+  background-color: #002230;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -8092,8 +8101,12 @@ p, span, b {
   display: block; }
 
 .dropdown:hover .dropbtn {
-  background-color: #c6a062;
+  background-color: #002230;
   color: #fff; }
+
+.texto_tamaño_est {
+  font-size: 54px;
+  font-family: "roboto"; }
 
 .dropdown-content a:hover {
   color: #fff;
@@ -8119,21 +8132,23 @@ p, span, b {
   font-size: 12px;
   cursor: pointer;
   position: fixed;
-  bottom: 20px;
+  bottom: 47px;
   right: 20px;
   box-shadow: -1px 1px 5px 1px #B58D10;
   z-index: 2; }
 
 .color_enviar {
-  background-color: #0057A1;
+  background-color: #B58D10;
   color: white; }
   .color_enviar:hover {
+    background-color: #002230;
     color: white; }
 
 .color_cancelar {
-  background-color: rgba(204, 3, 3, 0.801);
+  background-color: #002230;
   color: white; }
   .color_cancelar:hover {
+    background-color: #B58D10;
     color: white; }
 
 .color_dorado {
@@ -8141,6 +8156,18 @@ p, span, b {
 
 .color_azul {
   color: #002230; }
+
+.titulo {
+  font-weight: 500;
+  line-height: 32px;
+  color: #fff;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 10%; }
+
+.codigo_style {
+  padding-left: 0;
+  font-weight: bold; }
 
 #detalle_asesor {
   padding: 10%; }
@@ -8192,7 +8219,6 @@ p, span, b {
     right: 0;
     background-color: #101734ab; }
   #contact .titulo {
-    font-size: 36px;
     font-weight: 500;
     line-height: 32px;
     color: #fff;
@@ -8203,7 +8229,8 @@ p, span, b {
 #texto_contacto {
   margin-top: -2%; }
   #texto_contacto .titulo_cont {
-    margin-top: -5%; }
+    margin-top: -5%;
+    font-weight: bold; }
 
 #banner_contador {
   background: url(../images/aseguradoras.jpg);
@@ -8232,12 +8259,17 @@ p, span, b {
   color: #B58D10; }
 #slider_mision_vision .cont_top_valores {
   margin-bottom: 6%; }
+#slider_mision_vision #cont_top_valores2 {
+  margin-bottom: 9%; }
+#slider_mision_vision #valores {
+  margin-bottom: 4%; }
 #slider_mision_vision h2 {
   margin-bottom: 5%; }
 #slider_mision_vision .color_titulo {
   color: #B58D10; }
 #slider_mision_vision .color_titulo_valores {
-  color: #002230; }
+  color: #002230;
+  font-weight: bold; }
 
 #arrendamientos {
   background-image: url(../images/Gerencia\ comercial.jpg);
@@ -8330,7 +8362,7 @@ p, span, b {
     background-color: #101734ab; }
 
 #administracion {
-  background-image: url(../images/administracion.jpg);
+  background-image: url(../images/administración_de_inmuebles.jpg);
   margin: 0px;
   background-position: center center;
   background-size: cover;
@@ -8389,6 +8421,12 @@ p, span, b {
 
 #symil2 {
   padding: 6%; }
+  #symil2 .color_servicio {
+    color: #002230;
+    font-size: 48px;
+    font-weight: bold; }
+  #symil2 .organizacion_texto {
+    text-align: justify; }
 
 .posicion_servi {
   margin-top: -25%; }
@@ -8400,8 +8438,8 @@ p, span, b {
   margin-top: -37%; }
 
 .icono {
-  width: 106%;
-  object-fit: none; }
+  width: 100%;
+  object-fit: contain; }
 
 #corretaje {
   background-image: url(../images/corretaje.jpg);
@@ -8496,6 +8534,41 @@ p, span, b {
 .cuerpo_proyecto {
   padding: 10%; }
 
+.dimencion_imagen {
+  background-color: white;
+  margin-bottom: 10%; }
+
+.cuadro_button {
+  margin-top: 12%; }
+
+.cuadro_dorado {
+  background-color: #b58d10;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin-left: -92%;
+  z-index: -1;
+  margin-top: 7%; }
+
+.estilo_titulo {
+  color: #111534;
+  font-weight: bold; }
+
+.dimencion_imagen_facility {
+  background-color: white;
+  margin-bottom: 15%; }
+
+.dimencion_imagen_mantenimiento {
+  background-color: white;
+  margin-bottom: 13%; }
+
+.cuadro_button_exteriores {
+  margin-top: 12%;
+  margin-bottom: 9px; }
+
+.sub_gerencial {
+  font-weight: bold; }
+
 #inmuebles {
   background-image: url(../images/propiedades.jpg);
   margin: 0px;
@@ -8562,13 +8635,13 @@ p, span, b {
   #buscador_inmuebles .gestion_inmueble {
     position: absolute;
     top: 0px;
-    font-size: 9px;
+    font-size: 14px;
     color: #ffffff;
     text-align: center;
     letter-spacing: 1.5px;
     background-color: rgba(181, 141, 16, 0.66);
     padding: 12px 41px 11px 45px;
-    margin-left: 50%; }
+    margin-left: 41%; }
   #buscador_inmuebles .card-body {
     background-color: #002230; }
   #buscador_inmuebles .dorado {
@@ -8612,9 +8685,10 @@ p, span, b {
 #contacto .color_comparit {
   background-color: #002230; }
   #contacto .color_comparit:hover {
-    background-color: #0057A1; }
+    background-color: #B58D10; }
   #contacto .color_comparit .color_blanco_url {
-    color: white; }
+    color: white;
+    text-decoration: none; }
 #contacto .icon_foot {
   font-size: 23px;
   padding: 0px; }
