--- a/scss/_zservicios.scss
+++ b/scss/_zservicios.scss
@@ -105,7 +105,7 @@ p{
     }
 }
 #administracion{
-    background-image: url(../images/administracion.jpg);
+    background-image: url(../images/administración_de_inmuebles.jpg);
     margin: 0px;
     background-position: center center;
     background-size: cover;
@@ -169,6 +169,15 @@ p{
 }
 #symil2{
     padding: 6%;
+    .color_servicio{
+        color: $color_azul_oscuro;
+        font-size: 48px;
+        font-weight: bold;
+    }
+    .organizacion_texto{
+        text-align: justify;
+    
+    }
 }
 .posicion_servi{
     margin-top: -25%;
@@ -182,8 +191,8 @@ p{
     }
 
 .icono{
-    width: 106%;
-    object-fit: none;
+    width: 100%;
+    object-fit: contain;
     }
 
     #corretaje{
@@ -290,4 +299,39 @@ p{
 }
 .cuerpo_proyecto{
     padding: 10%;
+}
+.dimencion_imagen{
+    background-color: white;
+    margin-bottom: 10%;
+}
+.cuadro_button{
+    margin-top: 12%;
+}
+.cuadro_dorado{
+    background-color: #b58d10;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin-left: -92%;
+    z-index: -1;
+    margin-top: 7%
+}
+.estilo_titulo{
+    color: #111534;
+    font-weight: bold;
+}
+.dimencion_imagen_facility{
+    background-color: white;
+    margin-bottom: 15%;
+}
+.dimencion_imagen_mantenimiento{
+    background-color: white;
+    margin-bottom: 13%;
+}
+.cuadro_button_exteriores{
+    margin-top: 12%;
+    margin-bottom: 9px;
+}
+.sub_gerencial{
+    font-weight: bold;
 }
