--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -136,6 +136,7 @@ p, span, b {
     font-size: 16px;
 }
 #destacadas{
+    margin-top: -6%;
     .precio_inmueble{
     position: absolute;
     top: 221px;
@@ -320,9 +321,18 @@ p, span, b {
 
 #asesores{
     .letra_titulo{
-        color: $color_dorado;
+        color: $color_azul_oscuro;
         font-size: 48px;
         font-weight: bold;
+    }
+    .main-title::before{
+        content: '';
+        position: absolute;
+        height: 3px;
+        width: 10%;
+        background-color: #B58D10;
+        margin: auto;
+        margin-top: 6%;
     }
     .color_titulo_Card{
         color: $color_azul_oscuro;
@@ -375,11 +385,26 @@ p, span, b {
     font-size: 48px;
     font-weight: bold;
 }
-.titulo_Servi{
-    color: $color_dorado;
-    font-size: 48px;
-    font-weight: bold;
+
+#formualrios{
+    .titulo_Servi{
+        color: $color_azul_oscuro;
+        font-size: 48px;
+        font-weight: bold;
+      
+    }
+    .linea::before{
+        content: '';
+        position: absolute;
+        height: 3px;
+        width: 12%;
+        background-color: #B58D10;
+        margin: auto;
+        margin-top: 6%;
+    }
 }
+
+
 #aseguradoras{
     
    .margen_top{
@@ -391,6 +416,12 @@ p, span, b {
     color: $color_azul_oscuro;
     font-size: 48px;
     font-weight: bold;
+    }
+    .margen{
+        padding-left: 0%;   
+    }
+    .aliados_contenedor{
+        left: 7%;
     }
     img{
     height: 100%;
@@ -413,11 +444,24 @@ p, span, b {
     }
 }
 #ultimas_noticias{
+    
     .letra_titulo{
-        color: $color_dorado;
+        color: $color_azul_oscuro;
         font-size: 48px;
         font-weight: bold;
+        
     }
+    .main-title::before {
+        content: '';
+        position: absolute;
+        height: 3px;
+        width: 9%;
+        background-color: #B58D10;
+        margin: auto;
+        margin-top: 7%;
+    }
+   
+    
     hr{
         width: 90%;
         border-top: 1px solid $color_dorado;
@@ -430,6 +474,14 @@ p, span, b {
         background-color: $color_dorado ;
         color:white;
     }
+}
+.boton_ver_mas{
+    background-color: $color_azul_oscuro;
+    color: white;
+}
+.boton_ver_mas:hover{
+    background-color: $color_dorado ;
+    color:white;
 }
 #consignar{
     position: relative;
