--- a/menu/menu.css
+++ b/menu/menu.css
@@ -212,7 +212,7 @@
 	color:#777;
 }
 .yit-social li a:hover {
-    color: #c6a062;
+    color:  black;
 }
 .yit-custom-nav-2
 .left-side-nav .nav-toggle-bar {
