--- a/scss/_zdetalle_inmueble.scss
+++ b/scss/_zdetalle_inmueble.scss
@@ -65,7 +65,7 @@
         }
     }
     .property-single-detail-title{
-        border-bottom: 1px solid #cdcdcd;
+        border-bottom: 1px solid $color_dorado;
         padding-bottom: 11px;
         margin-bottom: 30px;
     }
