--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -66,6 +66,15 @@ p, span, b {
     margin-top: -10%;
     z-index: 2;
 
+    .form-control{
+        &:focus{
+            border-color: $color-input !important;
+            box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px $color-input !important;
+            outline: 0 none;
+        
+        }
+    }
+
 
     .container{
     margin-top: 34px;
@@ -681,7 +690,7 @@ p, span, b {
 }
 .dropdown-content a:hover {
     color: #fff;
-    background-color: #c6a062;
+    background-color: $color_dorado;
     padding: 10px 22px;
     line-height: 35px !important;
     transition: 0.5s all ease;
