--- a/scss/_zservicios.scss
+++ b/scss/_zservicios.scss
@@ -105,7 +105,7 @@ p{
     }
 }
 #administracion{
-    background-image: url(../images/administración_de_inmuebles.jpg);
+    background-image: url(../images/administracion_de_inmuebles.jpg);
     margin: 0px;
     background-position: center center;
     background-size: cover;
