Se agrega ajustes enviados por el cliente
se implementa el blog como el cliente especifico

--- a/css/style.css
+++ b/css/style.css
@@ -7755,10 +7755,10 @@ p, span, b {
   font-size: 16px; }
 
 #destacadas {
-  margin-top: 0%; }
+  margin-top: 5%; }
   #destacadas .precio_inmueble {
     position: absolute;
-    top: 221px;
+    top: 210px;
     font-size: 9px;
     color: #ffffff;
     text-align: center;
@@ -7775,7 +7775,7 @@ p, span, b {
     letter-spacing: 1.5px;
     background-color: rgba(181, 141, 16, 0.66);
     padding: 12px 41px 11px 45px;
-    margin-left: 40%; }
+    margin-left: 45%; }
   #destacadas .info_inmueble {
     display: flex;
     list-style: none;
@@ -7903,6 +7903,62 @@ p, span, b {
     -moz-transition-timing-function: ease-out;
     -moz-transition-duration: 100ms; }
   #servicios .text_servi {
+    font-weight: bold;
+    color: #002230; }
+
+#formulario {
+  background-image: url(../images/aseguradoras.jpg);
+  margin: 0px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative; }
+  #formulario .cont_servi {
+    padding: 6%; }
+  #formulario .cont_icono {
+    font-size: 84px;
+    padding: 15%;
+    color: #0057A1; }
+  #formulario .cont_arrendamiento {
+    margin: 17px; }
+  #formulario .cont_ventas {
+    margin: 3%; }
+  #formulario .titulo_cont_servi {
+    margin-top: 9%; }
+  #formulario .tamaño_unifianza_logo {
+    width: 80%; }
+  #formulario .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab; }
+  #formulario .letra_gruesa2 {
+    color: white;
+    font-size: 48px;
+    font-weight: bold; }
+  #formulario .color_blanco {
+    color: white; }
+  #formulario .color_fichas {
+    background-color: white;
+    -webkit-transform: scale(1, 1);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 250ms;
+    -moz-transform: scale(1, 1);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 250ms; }
+  #formulario .color_fichas:hover {
+    -webkit-transform: scale(1.12, 1.12);
+    -webkit-transition-timing-function: ease-out;
+    -webkit-transition-duration: 100ms;
+    -moz-transform: scale(1.12, 1.12);
+    -moz-transition-timing-function: ease-out;
+    -moz-transition-duration: 100ms; }
+  #formulario .text_servi {
     font-weight: bold;
     color: #002230; }
 
