--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -166,10 +166,10 @@ p, span, b {
     font-size: 16px;
 }
 #destacadas{
-    margin-top: 0%;
+    margin-top: 5%;
     .precio_inmueble{
     position: absolute;
-    top: 221px;
+    top: 210px;
     font-size: 9px;
     color: #ffffff;
     text-align: center;
@@ -187,7 +187,7 @@ p, span, b {
         letter-spacing: 1.5px;
         background-color: rgba(181, 141, 16, 0.66);
         padding: 12px 41px 11px 45px;
-        margin-left: 40%;
+        margin-left: 45%;
     }
     .info_inmueble{
         display: flex;
@@ -349,6 +349,79 @@ p, span, b {
     
 }
 
+#formulario{
+    background-image: url(../images/aseguradoras.jpg);
+    margin: 0px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    position: relative;
+    .cont_servi{
+        padding: 6%;
+    }
+    .cont_icono{
+        font-size: 84px;
+        padding: 15%;
+        color: $color_azul;
+    }
+    .cont_arrendamiento{
+        margin: 17px;
+    }
+    .cont_ventas{
+        margin: 3%;
+    }
+    .titulo_cont_servi{
+        margin-top: 9%;
+        
+    }
+    .tamaño_unifianza_logo{
+        width: 80%
+    }
+    .overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #101734ab;
+    }
+    .letra_gruesa2{
+        color: white;
+        font-size: 48px;
+        font-weight: bold;
+      }
+      .color_blanco{
+          color: white;
+      }
+      .color_fichas{
+        background-color: white;
+        -webkit-transform: scale(1,1);
+        -webkit-transition-timing-function: ease-out;
+        -webkit-transition-duration: 250ms;
+        -moz-transform: scale(1,1);
+        -moz-transition-timing-function: ease-out;
+        -moz-transition-duration: 250ms;
+      }
+      .color_fichas:hover{
+        -webkit-transform: scale(1.12,1.12);
+        -webkit-transition-timing-function: ease-out;
+        -webkit-transition-duration: 100ms;
+        -moz-transform: scale(1.12,1.12);
+        -moz-transition-timing-function: ease-out;
+        -moz-transition-duration: 100ms;
+        
+
+      }
+
+      .text_servi{
+        font-weight: bold;
+        color: $color_azul_oscuro;
+
+      }
+}
 #asesores{
     .letra_titulo{
         color: $color_azul_oscuro;
