--- a/scss/_zservicios.scss
+++ b/scss/_zservicios.scss
@@ -1,5 +1,5 @@
 #arrendamientos{
-    background-image: url(../images/Gerencia\ comercial.jpg);
+    background-image: url(../images/Gerencia_comercial.jpg);
     margin: 0px;
     background-position: center center;
     background-size: cover;
@@ -86,7 +86,7 @@ p{
     }
 }
 #ventas{
-    background-image: url(../images/Gerencia\ comercial.jpg);
+    background-image: url(../images/Gerencia_comercial.jpg);
     margin: 0px;
     background-position: center center;
     background-size: cover;
@@ -228,7 +228,7 @@ p{
         
     }
     #Gerencia_Comercial{
-        background-image: url(../images/Gerencia\ comercial.jpg);
+        background-image: url(../images/Gerencia_comercial.jpg);
         margin: 0px;
         background-position: center center;
         background-size: cover;
