--- a/css/menu.css
+++ b/css/menu.css
@@ -152,7 +152,7 @@ body{
   position: relative;
 }
 body.offcanvas{
-  overflow: hidden;
+  overflow: inherit;
   left: 0px;
   transition: left 0.25s ease;
 }
