--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -26,6 +26,9 @@ p, span, b {
         margin-top: -29%;
         font-size: 339%;
         text-shadow: 0px 1px 2px #ffffff;
+        @include media-breakpoint-up(md){
+           
+            }
     }
     #style_slide_dos{
         margin-top: -32%;
