--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -118,7 +118,7 @@ p, span, b {
 .logo{
      width: 60%;
     height: 0%;
-    margin-top: -7%;
+    margin-top: -18%;
     padding: 1%
     }
     .margen_top{
@@ -314,7 +314,8 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab;
+    background-color: rgba(0,0,0,.38);
+        
     }
     .letra_gruesa2{
         color: white;
@@ -389,7 +390,7 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab;
+    background-color: rgba(0, 0, 0, 0.38);
     }
     .letra_gruesa2{
         color: white;
@@ -632,7 +633,7 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab;
+    background-color: rgba(0, 0, 0, 0.38);
     }
     .style_icono{
     color: white;
@@ -797,7 +798,7 @@ p, span, b {
     margin-top: -200%;
 }
 .dimencion_boton_pse{
-    width: 50%;
+    width: 65%;
     height: 50%;
     object-fit: contain;
     padding-top: 0%;
@@ -904,11 +905,11 @@ p, span, b {
     }
     #redes_sociales{
         .tamaño{
-            font-size: 18px;
+            font-size: 25px;
         }
         .tamaño_wapp{
-            font-size: 35px;
-            margin-top: 215%;
+            font-size: 50px;
+            margin-top: 200%;
             -webkit-transform: scale(1,1);
             -webkit-transition-timing-function: ease-out;
             -webkit-transition-duration: 250ms;
