--- a/scss/_zservicios.scss
+++ b/scss/_zservicios.scss
@@ -14,7 +14,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
     .boton{
         padding: .84rem 2.14rem;
@@ -101,7 +101,7 @@ p{
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
 }
 #administracion{
@@ -120,7 +120,7 @@ p{
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
     .boton{
         padding: .84rem 2.14rem;
@@ -151,7 +151,7 @@ p{
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
     .boton{
         padding: .84rem 2.14rem;
@@ -211,7 +211,7 @@ p{
             bottom: 0;
             left: 0;
             right: 0;
-            background-color: #101734ab;
+            background-color: rgba(0, 0, 0, 0.38);
         }
         .boton{
             padding: .84rem 2.14rem;
@@ -243,7 +243,7 @@ p{
             bottom: 0;
             left: 0;
             right: 0;
-            background-color: #101734ab;
+            background-color: rgba(0, 0, 0, 0.38);
         }
         .boton{
             padding: .84rem 2.14rem;
@@ -275,7 +275,7 @@ p{
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
     .boton{
         padding: .84rem 2.14rem;
