--- a/scss/_zservicios.scss
+++ b/scss/_zservicios.scss
@@ -319,11 +319,15 @@ p{
 }
 .dimencion_imagen_facility{
     background-color: white;
-    margin-bottom: 15%;
+    margin-bottom: 78px;
 }
 .dimencion_imagen_mantenimiento{
     background-color: white;
-    margin-bottom: 13%;
+    margin-bottom: 11%;
+}
+.dimencion_imagen_tigeras{
+    background-color: white;
+    margin-bottom: 11%;
 }
 .cuadro_button_exteriores{
     margin-top: 12%;
