--- a/css/style.css
+++ b/css/style.css
@@ -8816,8 +8816,8 @@ p, span, b {
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  width: 100%;
-  left: -3%; }
+  width: 106%;
+  left: -6%; }
 
 .dropdown-content a {
   color: black;
@@ -9385,11 +9385,15 @@ p, span, b {
 
 .dimencion_imagen_facility {
   background-color: white;
-  margin-bottom: 15%; }
+  margin-bottom: 78px; }
 
 .dimencion_imagen_mantenimiento {
   background-color: white;
-  margin-bottom: 13%; }
+  margin-bottom: 11%; }
+
+.dimencion_imagen_tigeras {
+  background-color: white;
+  margin-bottom: 11%; }
 
 .cuadro_button_exteriores {
   margin-top: 12%;
@@ -9673,7 +9677,7 @@ p, span, b {
   height: 100%; }
 
 #blog {
-  background-image: url(../images/proyectos_nuevos.jpg);
+  background-image: url(../images/banner_blog.png);
   margin: 0px;
   background-position: center center;
   background-size: cover;
@@ -9688,7 +9692,7 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab; }
+    background-color: rgba(0, 0, 0, 0.38); }
   #blog .titulo {
     font-size: 36px;
     font-weight: 500;
