--- a/scss/_zblog.scss
+++ b/scss/_zblog.scss
@@ -1,5 +1,5 @@
 #blog{
-    background-image: url(../images/proyectos_nuevos.jpg);
+    background-image: url(../images/banner_blog.png);
     margin: 0px;
     background-position: center center;
     background-size: cover;
@@ -14,7 +14,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
     .titulo{
     font-size: 36px;
