--- a/css/carousel.inmuebles.css
+++ b/css/carousel.inmuebles.css
@@ -3,12 +3,12 @@
     height: 199px;
     text-align: center;
     background: rgba(255,255,255,1);
-    background: -moz-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(0,90,170,1) 47%, rgba(237,237,237,1) 100%);
-    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(0,90,170,1)), color-stop(100%, rgba(237,237,237,1)));
-    background: -webkit-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(0,90,170,1) 47%, rgba(237,237,237,1) 100%);
-    background: -o-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(0,90,170,1) 47%, rgba(237,237,237,1) 100%);
-    background: -ms-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(0,90,170,1) 47%, rgba(237,237,237,1) 100%);
-    background: linear-gradient(45deg, rgba(255,255,255,1) 0%, rgba(0,90,170,1) 47%, rgba(237,237,237,1) 100%);
+    background: -moz-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgb(0, 34, 48 ) 47%, rgba(237,237,237,1) 100%);
+    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgb(0, 34, 48 )), color-stop(100%, rgba(237,237,237,1)));
+    background: -webkit-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgb(0, 34, 48 ) 47%, rgba(237,237,237,1) 100%);
+    background: -o-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgb(0, 34, 48 ) 47%, rgba(237,237,237,1) 100%);
+    background: -ms-linear-gradient(45deg, rgba(255,255,255,1) 0%, rgb(0, 34, 48 ) 47%, rgba(237,237,237,1) 100%);
+    background: linear-gradient(45deg, rgba(255,255,255,1) 0%, rgb(0, 34, 48 ) 47%, rgba(237,237,237,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=1 );
 }
 .carousel-item{
