--- a/css/proyectosNvo.css
+++ b/css/proyectosNvo.css
@@ -3,7 +3,7 @@
 }
 .jumbotronn h1{
     /*background-color: #35353D;   */
-    color: black !important;
+    color: white;
 }
 .imgProyectBack{
     background-repeat: no-repeat;
@@ -12,20 +12,29 @@
     display: block;
 }
 
+.fondo_buscador{
+    background-color: #7777774a;
+}
 h2 {
-    color: black;
+    color: white;
     font-size: 40px;
     margin-top: 50px;
     margin-bottom: 50px;
     font-weight: 500;
 }
 a {
-    color: #337ab7;
+    color: #B58D10;
     text-decoration: none;
 }
 a:hover, a:focus {
-    color: #23527c;
+    color: #B58D10;
     text-decoration: none;
+}
+.form-control:focus{ 
+    border-color: #B58D10 !important;
+    box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px #B58D10 !important;
+    outline: 0 none;
+    
 }
 #headJumbotron {
     margin-top: 35px;
