se arreglan las opacidades de imagenes

--- a/css/carousel.inmuebles.css
+++ b/css/carousel.inmuebles.css
@@ -1,5 +1,5 @@
 /* //estilos Carrousel */
-.carousel-inner{
+.fondo_carrousel{
     height: 199px;
     text-align: center;
     background: rgba(255,255,255,1);
