--- a/css/style.css
+++ b/css/style.css
@@ -9011,7 +9011,7 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab; }
+    background-color: rgba(0, 0, 0, 0.38); }
   #contact .titulo {
     font-weight: 500;
     line-height: 32px;
@@ -9606,7 +9606,7 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab; }
+    background-color: rgba(0, 0, 0, 0.38); }
   #contactanos .titulo {
     font-size: 36px;
     font-weight: 500;
